tracker-extract-3 crashed with signal 31 in __GI___ioctl()
We've gotten several automated bug reports of a crash on Ubuntu
- Ubuntu 22.04 Alpha
- tracker 3.3.0 Beta
The journal reports
tracker-extract-3.service: Main process exited, code=killed, status=31/SYS
systemd: tracker-extract-3.service: Failed with result 'signal'.
systemd: Failed to start Tracker metadata extractor.